Add a finder controller with action/view.

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -1,5 +1,5 @@
 <section>
-	<h3><%= link_to customer.full_name, customer%></h3>
+	<!--//<h3><%= link_to customer.full_name, customer%></h3> -->
 
 	<% if customer.image_filename %>
 		<p><%= link_to image_tag(customer.image_filename, :width => '150', :height => '250')%></p>	
