--- a/app/assets/stylesheets/customers.css.scss
+++ b/app/assets/stylesheets/customers.css.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the Customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html {
+	width: 900px;
+	height: 100%;
+	
+}
+
+body {
+	background: -webkit-linear-gradient(top, #DDD, #DDD);
+}
+
+section {
+	border:solid 1px #000;
+	width: 230px;
+	height: 360px;
+	padding: 15px;
+	margin :10px;
+	position: relative;
+	display: inline-block;
+	box-shadow: 3px 3px 3px #888888;
+	background-color:#FFF;
+
+}
