--- a/app/views/finder/view.html.erb
+++ b/app/views/finder/view.html.erb
@@ -1,2 +1,9 @@
 <h1>Finder#view</h1>
 <p>Find me in app/views/finder/view.html.erb</p>
+
+<%= render @customer %>
+
+<p>
+	<%= link_to 'Home', rooth_path %>
+</p>
+
