--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.label :notes %><br />
     <%= f.text_field :notes %>
   </div>
+  <div>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
